src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/GtIntNull.deca
//Description
//  Test > entre un int et un null
//
//Réponse
//  Erreur contextuelle ligne 9
//  types incompatibles pour faire la comparaison
{
    int x;
    x > null;
}